idk a lot + gradle 9 cause we like gradle updates also a bunch of stuff left to do Seems to build at least so there's that